another bug with enable/disable scroll squashed

--- a/src/packages/modules/editorial-hotspots-e6/css/editorial-hotspots-e6.scss
+++ b/src/packages/modules/editorial-hotspots-e6/css/editorial-hotspots-e6.scss
@@ -73,13 +73,86 @@ $transitionSpeed: 0.5s;
 
 /*GLOBAL OVERLAY*/
 .hspot-global-details-main {
+
+
+/*
+  &.variant1 { 
+    width: 280px;
+
+    top: -159px;
+    left: 63px;
+    .top {
+      background-color: #fff;
+    }
+    .middle {
+      background-color: #fff;
+      padding: 30px 40px 29px 30px;
+      border-bottom: 1px solid #e4e7eb;
+      position: relative;
+      .p3 {
+        margin-bottom: 7px;
+        &.cHBC {
+          margin-bottom: 0;
+        }
+      }
+      .arrow-left-top {
+        position: absolute;
+        top: 31px;
+        left: -10px;
+      }
+      .arrow-right-top {
+        position: absolute;
+        top: 31px;
+        right: -10px;
+      }
+      .arrow-left-bottom {
+        position: absolute;
+
+        top: 156px;
+        left: -10px;
+      }
+      .arrow-right-bottom {
+        position: absolute;
+        top: 156px;
+        right: -10px;
+      }
+      
+    }
+    .footer {
+      background-color: #fff;
+      padding: 18px 40px 0px 30px;
+      height: 107px;
+      .p3 {
+        font-style: italic;
+        color: $secondarySlateDark;
+        margin-bottom: 8px;
+      }
+      blockquote.l4 {
+        color: $gray40;
+        position: relative;
+        margin-left: 24px;
+        &:before {
+          display: block;
+          content: "\201C";
+          font-size: 40px;
+          font-family: Georgia;
+          position: absolute;
+          left: -24px;
+          top: -13px;
+          color: $secondarySlateDark;
+        }
+      }
+    }
+  }
+*/
+
   .overlay-inner {
     margin: 0px auto;
-    width: 230px;
+    width: 280px;
     background-color: #fff;
     .overlay-close {
       position: relative;
-      width: 230px;
+      width: 280px;
       -moz-box-shadow: 0 0 30px rgba(39, 43, 55, 0.15);
       -webkit-box-shadow: 0 0 30px rgba(39, 43, 55, 0.15);
       box-shadow: 0 0 30px rgba(39, 43, 55, 0.15);
@@ -91,37 +164,33 @@ $transitionSpeed: 0.5s;
       
       .middle {
         background-color: #fff;
-        padding: 20px 30px 23px 20px;
+        padding: 30px 40px 29px 30px;
         border-bottom: 1px solid #e4e7eb;
         position: relative;
         
-        .p4, .p3 {
-          @include px-em--font-size--line-height(12,18);
-          margin-bottom: 4px;
-          
-          &.cHBI {
+        p.p4, p.p3 {
+          margin-bottom: 7px;
+          &.cHBC {
             margin-bottom: 0;
           }
         }
       }
       .footer {
         background-color: #fff;
-        padding: 20px 30px 20px 20px;
+        padding: 18px 40px 0px 30px;
+        height: 107px;
         
         p.p4, p.p3 {
-          @include px-em--font-size--line-height(12,18);
           font-style: italic;
           color: $secondarySlateDark;
-          margin-bottom: 9px;
+          margin-bottom: 8px;
         }
         
         blockquote.l4, blockquote.l3 {
           color: $gray40;
           position: relative;
           margin-left: 24px;
-          @include px-em--font-size--line-height(10,16);
-          
-          &:before {
+          &:before { 
             display: block;
             content: "\201C";
             font-size: 40px;
